Add exclude for docs build dir, and comments and keyword arg names to make it more understandable

--- a/interface.yaml
+++ b/interface.yaml
@@ -2,3 +2,5 @@ name: grafana-dashboard
 summary: Interface for importing dashboards into Grafana
 version: 1
 maintainer: "Cory Johns <cory.johns@canonical.com>"
+exclude:
+  - .docs
